[package]
name = "runner"
version = "0.1.0"
authors = ["victor ermolaev <victor.ermolaev@ing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
failure = "0.1.6"
futures = "0.3.1"
